--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,7 +1,45 @@
 * {
-  box-sizing: border-box;
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
-// TODO
+:root {
+  --white-100: #F8F8F8;
+  --white-200: #D7D7D7;
+  --white-300: #BBBBBB;
+  --pink: #FF57B2;
+}
+
+@media(max-width:1080px) {
+  html {
+    font-size: 93.75%;
+  }
+}
+
+@media(max-width:720px) {
+  html {
+    font-size: 87.5%;
+  }
+}
+
+body {
+  background: #1A1D23;
+}
+
+body,
+input,
+textarea,
+select,
+button {
+  font: 400 1rem "Inter", sans-serif;
+}
+
+button {
+  cursor: pointer;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
