--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -1,1 +1,53 @@
-// TODO
+.banner {
+  height:400px;
+}
+
+.postContainer {
+  max-width: 1120px;
+  margin: 0 auto;
+  padding: 4rem 2rem 0 2rem;
+
+  h1 {
+    color: var(--white-100);
+    font-size: 3rem;
+  }
+
+  .postDetails {
+    padding-top: 1rem;
+    color: var(--white-300);
+    font-size: .875rem;
+
+    span {
+      svg {
+        margin-right: 0.5rem;
+      }
+
+      &+span {
+        padding-left: 1rem;
+      }
+    }
+  }
+
+  .postContent {
+    padding-bottom: 2rem;
+
+    h2 {
+      color: var(--white-100);
+      font-size: 2.25rem;
+      padding: 2rem 0;
+    }
+
+    p {
+      padding-top: 1rem;
+      color: var(--white-200);
+      font-size: 1.125rem;
+      &+p {
+        margin-top: 1rem;
+      }
+    }
+  }
+}
+
+.banner {
+  width: 100%;
+}
