--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -36,7 +36,7 @@
           margin-right: 0.5rem;
         }
 
-        &+span{
+        &+span {
           padding-left: 1rem;
         }
       }
@@ -48,7 +48,7 @@
   }
 
   .loadPosts {
-    padding-top: 3rem;
+    padding: 3rem 0;
     color: var(--pink);
 
     >span {
@@ -59,7 +59,18 @@
         filter: brightness(0.8);
       }
     }
+  }
 
+  .preview {
+    border-radius: 4px;
+    width: 100%;
+    height: 3rem;
+    font-weight: 600;
+    transition: filter .2s;
+    border-style: none;
 
+    &:hover {
+      filter: brightness(0.8);
+    }
   }
 }
